# logger

./: .gitignore  CMakeLists.txt
include/: glogmessage.h  loggerfactory.h  loggermanger.h
package/logger/include/: spdlogmessage.h
src/: CMakeLists.txt  glogmessage.cpp  logggerfactory.cpp  spdlogmessage.cpp
test/: CMakeLists.txt  test_spd.cpp
